--- a/preview.toml
+++ b/preview.toml
@@ -19,4 +19,4 @@ theme = "landing-page"
 [[params.social]]
   title = "slack"
   icon = "slack"
-  url = "/slack"
+  url = "https://devopsmsp.slack.com"
